Setup CodeClimate (coverage, maintainability)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Karlsruhe (KIT) Mensa meal plan fetcher",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive"
+    "test": "mocha --recursive",
+    "coverage": "nyc --reporter=lcov mocha --recursive"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "nyc": "^15.0.0"
   }
 }
