--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "homepage": "https://github.com/meyfa/ka-mensa-fetch#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.2"
+    "mocha": "^6.2.2",
+    "nyc": "^15.0.0"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
-    "moment": "^2.24.0",
-    "nyc": "^15.0.0"
+    "moment": "^2.24.0"
   }
 }
