--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "url": "https://github.com/meyfa/ka-mensa-fetch/issues"
   },
   "homepage": "https://github.com/meyfa/ka-mensa-fetch#readme",
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.2.2",
+    "mocha": "^7.0.0",
     "nyc": "^15.0.0"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "moment": "^2.24.0"
   }
