--- a/package.json
+++ b/package.json
@@ -30,15 +30,17 @@
     "node": ">=10.0.0"
   },
   "devDependencies": {
+    "axios-mock-adapter": "^1.18.2",
     "chai": "^4.2.0",
-    "eslint": "^7.10.0",
+    "chai-as-promised": "^7.1.1",
+    "eslint": "^7.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^30.6.3",
+    "eslint-plugin-jsdoc": "^30.7.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "mocha": "^8.1.3",
+    "mocha": "^8.2.0",
     "nyc": "^15.1.0"
   },
   "dependencies": {
