--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,3 +1,6 @@
 extends:
-  - standard
-  - "plugin:jsdoc/recommended"
+  - 'standard-with-typescript'
+  - 'plugin:jsdoc/recommended'
+
+parserOptions:
+  project: './tsconfig.json'
