--- a/package.json
+++ b/package.json
@@ -2,12 +2,21 @@
   "name": "ka-mensa-fetch",
   "version": "1.2.2",
   "description": "Karlsruhe (KIT) Mensa meal plan fetcher",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*",
+    "data/**/*"
+  ],
   "scripts": {
+    "clean": "rimraf dist",
+    "compile": "tsc && copyfiles -u 1 \"data/**/*\" dist/data && copyfiles LICENSE README.md dist && node setup-package.js",
+    "build": "npm run clean && npm run compile",
     "lint": "eslint --ignore-path .gitignore .",
     "lint-fix": "eslint --fix --ignore-path .gitignore .",
-    "test": "mocha --recursive",
-    "coverage": "nyc --reporter=lcov --all --include 'src/**/*.js' mocha --recursive"
+    "test": "ts-mocha --recursive",
+    "coverage": "nyc --reporter=lcov --all --include \"src/**/*.js\" npm test",
+    "prepack": "echo \"Must pack/publish from ./dist\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -30,21 +39,28 @@
     "node": ">=10.0.0"
   },
   "devDependencies": {
+    "@types/node": "^15.6.1",
+    "@typescript-eslint/eslint-plugin": "^4.25.0",
     "axios-mock-adapter": "^1.19.0",
-    "chai": "^4.3.0",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.20.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^32.2.0",
+    "copyfiles": "^2.4.1",
+    "eslint": "^7.27.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-config-standard-with-typescript": "^20.0.0",
+    "eslint-plugin-import": "^2.23.3",
+    "eslint-plugin-jsdoc": "^35.0.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "mocha": "^8.3.0",
-    "nyc": "^15.1.0"
+    "eslint-plugin-promise": "^5.1.0",
+    "mocha": "^8.4.0",
+    "nyc": "^15.1.0",
+    "rimraf": "^3.0.2",
+    "ts-mocha": "^8.0.0",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
     "axios": "^0.21.0",
-    "cheerio": "^1.0.0-rc.5",
+    "cheerio": "^1.0.0-rc.9",
     "moment": "^2.29.1"
   }
 }
