--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "npm run clean && npm run compile",
     "lint": "eslint --ignore-path .gitignore .",
     "lint-fix": "eslint --fix --ignore-path .gitignore .",
-    "test": "npm run clean && ts-mocha --recursive test/**/*.test.*",
+    "test": "npm run clean && ts-mocha --recursive \"test/**/*.test.*\"",
     "coverage": "nyc --reporter=lcov --all --include \"src/**/*.ts\" npm test",
     "prepack": "echo \"Must pack/publish from ./dist\" && exit 1"
   },
