--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ka-mensa-fetch",
   "version": "2.1.5",
   "description": "Karlsruhe (KIT) Mensa meal plan fetcher",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -36,7 +37,7 @@
   },
   "homepage": "https://github.com/meyfa/ka-mensa-fetch#readme",
   "engines": {
-    "node": ">=10.0.0"
+    "node": "^14.13.1 || >=16.0.0"
   },
   "devDependencies": {
     "@types/chai": "4.3.1",
