refactor: Move all source code into 'src/'
Now the index.ts doesn't live among the configuration files, and is
instead treated as a source file (which it has always been, of course).

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,7 @@
     "declaration": true,
     "outDir": "./dist"
   },
-  "exclude": [
-    "test",
-    "dist",
-    "node_modules"
+  "include": [
+    "src"
   ]
 }
