chore: Use personal eslint-config and update to ESLint 8

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,21 +1,13 @@
 extends:
-  - 'standard-with-typescript'
+  - '@meyfa/eslint-config'
   - 'plugin:jsdoc/recommended'
 
 parserOptions:
   project: './tsconfig.eslint.json'
 
 rules:
-  # this project requires .js extensions with imports because it is packaged as ESM:
-  import/extensions: [error, always]
   # require JSDoc on every standard location, and also on classes, interfaces and enums
   jsdoc/require-jsdoc: [ 'error', { contexts: [ 'ClassDeclaration', 'TSInterfaceDeclaration', 'TSEnumDeclaration' ] } ]
   jsdoc/require-param-type: off
   jsdoc/require-returns-type: off
   jsdoc/no-types: error
-
-overrides:
-  - files: 'test/**/*.test.*'
-    rules:
-      no-unused-expressions: off
-      '@typescript-eslint/no-unused-expressions': off
