--- a/package.json
+++ b/package.json
@@ -38,21 +38,17 @@
     "node": "^14.13.1 || >=16.0.0"
   },
   "devDependencies": {
+    "@meyfa/eslint-config": "2.0.0",
     "@types/chai": "4.3.1",
     "@types/chai-as-promised": "7.1.5",
     "@types/mocha": "9.1.1",
     "@types/node": "16.11.43",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
     "axios-mock-adapter": "1.21.1",
     "c8": "7.11.3",
     "chai": "4.3.6",
     "chai-as-promised": "7.1.1",
-    "eslint": "7.32.0",
-    "eslint-config-standard-with-typescript": "21.0.1",
-    "eslint-plugin-import": "2.26.0",
+    "eslint": "8.19.0",
     "eslint-plugin-jsdoc": "39.3.3",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "5.2.0",
     "mocha": "10.0.0",
     "rimraf": "3.0.2",
     "ts-node": "10.8.1",
