--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "homepage": "https://github.com/meyfa/ka-mensa-fetch#readme",
   "engines": {
-    "node": "^14.13.1 || >=16.0.0"
+    "node": ">=18.16.1"
   },
   "devDependencies": {
     "@meyfa/eslint-config": "4.0.0",
