--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "dist"
   ],
   "scripts": {
-    "clean": "rimraf dist",
-    "build": "npm run clean && tsc",
+    "build": "node -e \"fs.rmSync('./dist',{force:true,recursive:true})\" && tsc",
     "lint": "tsc --noEmit -p tsconfig.lint.json && eslint --ignore-path .gitignore .",
     "lint-fix": "tsc --noEmit -p tsconfig.lint.json && eslint --fix --ignore-path .gitignore .",
     "test": "mocha --require ts-node/register --recursive \"test/**/*.test.*\"",
@@ -46,7 +45,6 @@
     "eslint": "8.45.0",
     "eslint-plugin-jsdoc": "46.4.4",
     "mocha": "10.2.0",
-    "rimraf": "5.0.1",
     "ts-node": "10.9.1",
     "typescript": "5.1.6"
   },
