--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "node -e \"fs.rmSync('./dist',{force:true,recursive:true})\" && tsc",
     "lint": "tsc --noEmit -p tsconfig.lint.json && eslint --ignore-path .gitignore .",
     "lint-fix": "tsc --noEmit -p tsconfig.lint.json && eslint --fix --ignore-path .gitignore .",
-    "test": "mocha --recursive \"test/**/*.test.*\"",
+    "test": "mocha --require tsx --recursive \"test/**/*.test.*\"",
     "coverage": "c8 --reporter=lcov --reporter=text --all --include src --exclude \"src/types/\" npm test",
     "prepack": "npm run build"
   },
@@ -44,7 +44,7 @@
     "c8": "10.1.2",
     "eslint": "8.57.1",
     "mocha": "10.7.3",
-    "ts-node": "10.9.2",
+    "tsx": "4.19.1",
     "typescript": "5.6.2"
   },
   "dependencies": {
