--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   ],
   "scripts": {
     "build": "node -e \"fs.rmSync('./dist',{force:true,recursive:true})\" && tsc",
-    "lint": "tsc --noEmit -p tsconfig.lint.json && eslint --ignore-path .gitignore .",
-    "lint-fix": "tsc --noEmit -p tsconfig.lint.json && eslint --fix --ignore-path .gitignore .",
+    "lint": "tsc --noEmit -p tsconfig.lint.json && eslint .",
+    "lint-fix": "tsc --noEmit -p tsconfig.lint.json && eslint --fix .",
     "test": "mocha --require tsx --recursive \"test/**/*.test.*\"",
     "coverage": "c8 --reporter=lcov --reporter=text --all --include src --exclude \"src/types/\" npm test",
     "prepack": "npm run build"
@@ -37,15 +37,15 @@
     "node": ">=18.16.1"
   },
   "devDependencies": {
-    "@meyfa/eslint-config": "7.0.0",
-    "@types/mocha": "10.0.7",
-    "@types/node": "20.16.10",
+    "@meyfa/eslint-config": "8.0.0",
+    "@types/mocha": "10.0.9",
+    "@types/node": "20.16.11",
     "axios-mock-adapter": "2.0.0",
     "c8": "10.1.2",
-    "eslint": "8.57.1",
+    "eslint": "9.12.0",
     "mocha": "10.7.3",
     "tsx": "4.19.1",
-    "typescript": "5.6.2"
+    "typescript": "5.6.3"
   },
   "dependencies": {
     "axios": "^1.6.2",
